Added CSS and Sort Images

--- a/examples.html
+++ b/examples.html
@@ -5,7 +5,7 @@
   <title>TableQuery - Examples</title>
 
   <!-- additional for demo style -->
-  <link rel="stylesheet" href="http://tablequery.com/a/js/tablequery/tablequery.css">
+  <link rel="stylesheet" href="./css/tablequery.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
   <!-- required (jQuery + TableQuery JS -->
